--- a/style.css
+++ b/style.css
@@ -1,904 +1,21 @@
-body, html {
-  height: 100%;
-  margin: 0;
-  scroll-behavior: smooth;
-}
-.demo{
-  margin-top: 135px;
-  position: fixed;
-  left: 50%;
+body{
+  margin: 60px;
+  background: darkgrey;
 
-  transform: translate(-50%, -50%);
 }
-.demo a {
-  margin-bottom: 10px;
-  z-index: 2;
-  display: inline-block;
-  -webkit-transform: translate(0, -50%);
-  
-  color: #fff;
-  font : normal 400 20px/1 'Josefin Sans', sans-serif;
-  letter-spacing: .1em;
-  text-decoration: none;
-  transition: opacity .3s;
+.container-fluid{
+  background-color:#EEEEEE;
 }
-.demo a:hover {
-  opacity: .5;
-  background-color: transparent;
+.header{
+  text-align: center;
 }
-
-#section03 a {
-  padding-top: 60px;
+#imagetext{
+  background-color: white !important;
 }
-#section03 a span {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 46px;
-  height: 46px;
-  margin-left: -23px;
-  border: 1px solid #fff;
-  border-radius: 100%;
-  box-sizing: border-box;
+.main{
+  max-width: 660px; /* for  below IE7 use `width: 660px;` */
+    margin: 0 auto;
 }
-#section03 a span::after {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  content: '';
-  width: 16px;
-  height: 16px;
-  margin: -12px 0 0 -8px;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  box-sizing: border-box;
-}
-#section03 a span::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  content: '';
-  width: 44px;
-  height: 44px;
-  box-shadow: 0 0 0 0 rgba(255,255,255,.1);
-  border-radius: 100%;
-  opacity: 0;
-  -webkit-animation: sdb03 2.5s infinite;
-  animation: sdb03 2.5s infinite;
-  box-sizing: border-box;
-}
-@-webkit-keyframes sdb03 {
-  0% {
-    opacity: 0;
-  }
-  30% {
-    opacity: 1;
-  }
-  60% {
-    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes sdb03 {
-  0% {
-    opacity: 0;
-  }
-  30% {
-    opacity: 1;
-  }
-  60% {
-    box-shadow: 0 0 0 60px rgba(255,255,255,.1);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-
-
-
-
-
-
-
-
-/*Typewriter effect*/
-@media screen and (max-width: 425px){
-  .container2 p {
-    font-size: 16px;
-  }
-}
-@media screen and (min-width: 500px){
-  .container2 p {
-    font-size: 28px;
-  }
-}
-.container2 p {
-  
-  padding: 0.5rem;
+li span{
   font-weight: bold;
-  letter-spacing: 0.1rem;
-  text-align: center;
-  overflow: hidden;
-  color: #0ec78f;
-}
-.container2 p span.typed-text {
-  font-weight: normal;
-  color: #fff;
-}
-.container2 p span.cursor {
-  display: inline-block;
-  background-color: #ccc;
-  margin-left: 0.1rem;
-  width: 3px;
-  animation: blink 1s infinite;
-}
-.container2 p span.cursor.typing {
-  animation: none;
-}
-@keyframes blink {
-  0%  { background-color: #ccc; }
-  49% { background-color: #ccc; }
-  50% { background-color: transparent; }
-  99% { background-color: transparent; }
-  100%  { background-color: #ccc; }
-}
-
-
-.animnav{
-  margin-top: 30px;
-}
-.bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: #fff;
-  margin: 6px 0;
-  transition: 0.4s;
-}
-
-.change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
-}
-
-.change .bar2 {opacity: 0;}
-
-.change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
-}
-
-
-
-/*===== VARIABLES CSS =====*/
-:root{
-  /*===== Colors =====*/
-  --first-color: #212529;
-  --input-color: #212529;
-  --border-color: #DADCE0;
-}
-
-
-
-/*===== FORM =====*/
-.l-form{
-  
-  justify-content: center;
-  align-items: center;
-  
-}
-.form{
-  width: 325px;
-  height: 475px;
-  padding: 30px 30px;
-  border-radius: 16px;
-  box-shadow: 0 10px 25px rgba(92,99,105,.2);
-}
-.form__title{
-  font-weight: 400;
-  margin-bottom: 48px;
-}
-.form__div{
-  position: relative;
-  height: 48px;
-  margin-bottom: 24px;
-}
-.form__input{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  font-size: var(--normal-font-size);
-  border: 1px solid var(--border-color);
-  border-radius: 8px;
-  outline: none;
-  padding: 16px;
-  background: none;
-  z-index: 1;
-}
-.form__label{
-  position: absolute;
-  left: 16px;
-  top: 16px;
-  padding: 0 4px;
-  background-color: #fff;
-  color: var(--input-color);
-  font-size: var(--normal-font-size);
-  transition: .3s;
-}
-.form__button{
-  display: block;
-  margin-left: auto;
-  padding: 12px 32px;
-  outline: none;
-  border: none;
-  background-color: var(--first-color);
-  color: #fff;
-  font-size: var(--normal-font-size);
-  border-radius: 8px;
-  cursor: pointer;
-  transition: .3s;
-}
-.form__button:hover{
-  box-shadow: 0 10px 36px rgba(0,0,0,.25);
-}
-
-/*Input focus move up label*/
-.form__input:focus + .form__label{
-  top: -8px;
-  left: 12.8px;
-  color: var(--first-color);
-  font-size: 12px;
-  font-weight: 500;
-  z-index: 1;
-}
-
-/*Input focus sticky top label*/
-.form__input:not(:placeholder-shown).form__input:not(:focus)+ .form__label{
-  top: -8px;
-  left: 12.8px;
-  font-size: 13px;
-  font-weight: 500;
-  z-index: 1;
-}
-
-/*Input focus*/
-.form__input:focus{
-  border: 1.5px solid var(--first-color);
-}
-
-* {
-  box-sizing: border-box;
-}
-
- 
-
-@media (max-width: 1600px){
-  .page{
-    margin: 0 275px 0 275px;
-  }
-}
-@media (max-width: 1200px){
-  .page{
-    margin: 0 150px 0 150px;
-  }
-}
-@media (max-width: 600px){
-  .page{
-    margin: 0 10px 0 10px;
-  }
-}     
-.page {
-  padding: 2rem;
-  border-radius: 5px;
-  border: 1.5px solid #212529;
-  
-  background-color: #ddd;
-}
-
-.page p {
-  margin-top: 1rem;
-  margin-bottom: .5rem;
-}
-.skill-container {
-  width: 100%;
-  background-color: #f7f7f7;
-  border-radius: 3px;
-  box-shadow: 1px 4px 4px rgba(0,0,0,0.3);
-}
-.skills {
-  padding-right: 5px;
-  text-align: right;
-  font-size: 15px;
-  color: white;
-  font-weight: 600;
-}
-.load{
-  animation: loading 12s linear;
-}
-
-@keyframes loading{
- 0%{width: 0%}
-}
-
-.html {
-  background-color: #f60;
-  height: 20px;
-  width: 85%;
-}
-.css {
-  background-color: #01B5F2;
-  height: 20px;
-  width: 80%;
-}
-.js {
-  background-color: #0ec78f;
-  height: 20px;
-  width: 45%;
-}
-.php {
-  background-color: #6e0dd0;
-  height: 20px;
-  width: 60%;
-}
-.python {
-  background-color: #212529;
-  height: 20px;
-  width: 50%;
-}
-
-
-
-/*...........................Navigation bar complete styling here............................*/
-nav{
- background: #0ec78f;
- height: 80px; 
- width: 100%;
- z-index: 10;
- position: fixed;
- top: 0;
- left: 0;
-}
-
-nav ul{
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  list-style-type: none;
-  box-sizing: border-box;
-  float: right;
-  margin-right: 20px;
-}
-
-nav ul li{
-  display: inline-block;
-  line-height: 80px;
-  margin: 0 5px;
-}
-
-nav ul li a{
-  color: white;
-  font-size: 17px;
-  padding: 7px 13px;
-  border-radius: 4px;
-  
-}
-
-a.active, a:hover{
-  background: #212529;
-  transition: 0.5s;
-  color: white;
-  text-decoration: none;
-}
-
-.checkbtn{
-  font-size: 30px;
-  color: white;
-  float: right;
-  line-height: 80px;
-  margin-right: 40px;
-  cursor: pointer;
-  display: none;
-}
-
-#check{
-  display: none;
-}
-@media (max-width: 952px){
-  
-  nav ul li a{
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 858px){
-  .checkbtn{
-    display: block;
-  }
-  nav ul{
-    position: fixed;
-    width: 70%;
-    height: 722px;
-    background: #212529;
-    top: 80px;
-    left: -100%;
-    text-align: center;
-    transition: all .25s;
-  }
-  .navbar nav ul li{
-    display: block;
-    text-align: left;
-    margin-left: 10px;
-  }
-  nav ul li a{
-    font-size: 20px;
-  }
-  a:hover, a.active{
-    background: none;
-    color: #fff;
-  }
-  #check:checked ~ul{
-    left: 0;
-  }
-  nav{
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 80px;
-  }
-}
-
-/*...........................Complete end of Navigation bar styling............................*/
-
-
-
-
-/*................................Hero image and text on it..........................*/
-
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), 
-  url("https://cdn.get.tech/blog/wp-content/uploads/2020/02/tech-student-portfolio.jpg");
-  height: 99%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  box-shadow: 20px 20px 20px #b7b7b7;
-}
-
-.hero-text {
-  font-family: 'Vollkorn', serif;
-  text-align: center;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
-@media screen and (max-width: 425px){
-  .welcometext {
-    font-size: 30px;
-  }
-}
-@media screen and (min-width: 425px){
-  .welcometext {
-    font-size: 45px;
-  }
-}
-.hero-text button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  color: black;
-  color: white;
-  border-radius: 7px;
-  background-color: transparent;
-  text-align: center;
-  cursor: pointer;
-  margin-top: 25px;
-  border: 1.5px solid white;
-}
-
-.hero-text button:hover {
-  background-color: #0ec78f;
-  transition: 0.7s;
-  color: white;
-}
-
-/*....... hero section styling ends here let's move to services card's styling......*/
-
-
-
-
-/*.................................column and row class styling here...........................*/
-
-/* Float four columns side by side */
-
-.column {
-  float: left;
-  width: 25%;
-  padding: 0 25px;
-}
-
-.column2 {
-  float: left;
-  width: 25%;
-  padding: 0 25px;
-}
-
-/* Remove extra left and right margins, due to padding */
-
-
-.row {margin: 0 0px;}
-
-
-
-/* Responsive columns */
-
-@media screen and (max-width: 768px) {
-  .column2 {
-    width: 50%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (max-width: 428px) {
-  .column2 {
-    width: 50%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-
-
-
-
-@media screen and (max-width: 768px) {
-  .column {
-    width: 50%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (max-width: 428px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-
-
-/*from column class styling upto this comment the logic of CSS 
-will be used same for my services cards and stats counter stuff*/
-
-/* Style the counter cards */
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 16px;
-  text-align: center;
-  background-color: #fff;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
-}
-
-
-
-/*/ start count stats /*/
-
-section#counter-stats {
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
-}
-
-.stats {
-  text-align: center;
-  font-size: 55px;
-  font-weight: 700;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.stats .fa {
-  color: #0ec78f;
-  font-size: 60px;
-}
-
-/*/ end count stats /*/
-
-
-
-
-
-/*.............................Complete styling of the testimonial section................................*/
-
-.test{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.container{
-  position: relative;
-  width: 1100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 2px;
-
-}
-
-.container .box{
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 250px;
-  height: 400px;
-  margin: 20px;
-  background: #121e27;
-}
-
-.container .box .content{
-  padding: 30px;
-  text-align: center;
-}
-
-.container .box .content p{
-  color: #fff;
-  padding: 20px 0;
-}
-
-.container .box .content .user{
-  max-width: 72px;
-  border-radius: 50%;
-}
-.container .box .content h3{
-  color: #33d1a0;
-  text-transform: uppercase;
-  font-size: 16px;
-  letter-spacing: 1px;
-  font-weight: 600;
-
-}
-
-@media (max-width: 1050px){
-  .container
-  {
-    justify-content: center;
-  }
-
-}
-@media (max-width: 768px){
-  .container .box
-  {
-width: 100%;
-height: auto;
-padding: 30px 20px;
-  }
-
-}
-.box{
-   border-radius: 10px;
-}
-
-
-/*......Done with testimonial styling here let's move to footer and wrap up the website......*/
-
-
-
-
-/*.................................Styling of the Footer section................................*/
-
-
-.socials a{
-  border: 1px #f00;
-  width: 55px;
-  height: 55px;
-  padding: 0px 10px 10px 10px;
-  margin-right: 5px;
-  font-size: 35px;
-  border-radius: 6px;
-  display: inline-block;
-  color: #fff;
-}
-
-.socials a:hover{
-  color: #0ec78f;
-}
-
-.links ul a{
-  margin-top: 10px;
-  padding-top: 100px;
-  color: #fff;
-}
-
-
-.column1 {
-  float: left;
-  width: 33%;
-  padding: 0 25px;
-}
-
-
-/* Responsive column1 */
-
-@media screen and (max-width: 750px) {
-  .column1 {
-    width: 100%;
-    display: block;
-    margin-bottom: 20px;
-  }
-}
-
-/*.......................Ohh man finally done, huh!!!!!!!...........................*/
-
-.progress-container {
-  width: 100%;
-  height: 8px;
-  background: #0ec78f;
-  z-index: 100;
-  position: fixed;
- top: 80px;
- left: 0;
- box-shadow: 5px 5px 5px rgba(0,0,0,.25);
-}
-
-.progress-bar {
-  height: 8px;
-  background: #212529;
-  width: 0%;
-  z-index: 1000;
-}
-
-
-
-
-
-
-
-
-
-.journey {
-  background: linear-gradient(141deg, #ebf4f4 0%, #f1f1f1 25%, #d9f1f1 51%);
-}
-
-/* The actual timeline (the vertical ruler) */
-.timeline {
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-/* The actual timeline (the vertical ruler) */
-.timeline::after {
-  content: '';
-  position: absolute;
-  width: 6px;
-  background-color: white;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  margin-left: -3px;
-}
-
-/* Container around content */
-.container1 {
-  padding: 10px 40px;
-  position: relative;
-  background-color: inherit;
-  width: 50%;
-}
-
-/* The circles on the timeline */
-.container1::after {
-  content: '';
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  right: -15px;
-  background-color: white;
-  border: 4px solid #0ec78f;
-  top: 15px;
-  border-radius: 50%;
-  z-index: 1;
-}
-
-/* Place the container to the left */
-.left {
-  left: 0;
-}
-
-/* Place the container to the right */
-.right {
-  left: 50%;
-}
-
-/* Add arrows to the left container (pointing right) */
-.left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid white;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
-}
-
-/* Add arrows to the right container (pointing left) */
-.right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 30px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
-}
-
-/* Fix the circle for containers on the right side */
-.right::after {
-  left: -16px;
-}
-
-/* The actual content */
-.content1 {
-  padding: 20px 30px;
-  background-color: white;
-  position: relative;
-  border-radius: 6px;
-}
-
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
-  .timeline::after {
-  left: 31px;
-  }
-  
-  /* Full-width containers */
-  .container1 {
-  width: 100%;
-  padding-left: 70px;
-  padding-right: 25px;
-  }
-  
-  /* Make sure that all arrows are pointing leftwards */
-  .container1::before {
-  left: 60px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
-  }
-
-  /* Make sure all circles are at the same spot */
-  .left::after, .right::after {
-  left: 15px;
-  }
-  
-  /* Make all right containers behave like the left ones */
-  .right {
-  left: 0%;
-  }
 }
